--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -1,22 +1,4 @@
-.wrapper {
-	background-color: #fff;
-	border-radius: 2px;
-	box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, 0.05);
-	color: #fcfcfc;
-	width: 320px;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	margin-top: -300px;
-	margin-left: -160px;
-}
-
-@-webkit-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-@-moz-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-
-.fade-in {
-	float: left;
+.modal {
 	opacity: 0;
 	-webkit-animation:fadeIn ease-in 1;
 	-moz-animation:fadeIn ease-in 1;
@@ -29,7 +11,33 @@
 	-webkit-animation-duration: 0.2s;
 	-moz-animation-duration: 0.2s;
 	animation-duration: 0.2s;
+	z-index: 1050;
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	outline: 0;
 }
+
+.wrapper {
+	background-color: #fff;
+	border-radius: 2px;
+	box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, 0.05);
+	color: #fcfcfc;
+	width: 320px;
+	position: relative;
+	margin: 30px auto;
+}
+
+.input {
+	width: 100%;
+}
+
+@-webkit-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+@-moz-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
 .header {
 	text-align: center;
@@ -127,7 +135,6 @@
 }
 
 .table tr > th {
-	color: #444;
 	text-align: center;
 	font-weight: 600;
 	vertical-align: bottom;
@@ -142,6 +149,7 @@
 	padding: 10px;
 	vertical-align: top;
 	color: #ddd;
+	width: auto;
 }
 
 .table tr > td a {
@@ -158,14 +166,18 @@
 	color: #fcfcfc;
 }
 
+.table tr > td a.move-to {
+	background-color: #2c3e4f;
+	color: #fcfcfc;
+}
+
 .table tr > td a:hover {
 	background-color: #2e89c5;
 	color: #fcfcfc;
 }
 
 .footer {
-	padding: 10px 10px 20px;
-	margin-bottom: 20px;
+	padding: 10px 10px 40px;
 }
 
 .footer .buttons {
@@ -181,6 +193,7 @@
 	font-size: 15px;
 	text-transform: uppercase;
 	cursor: pointer;
+	background-image: none;
 }
 
 .btn:hover {
@@ -192,5 +205,26 @@
 }
 
 .btn:nth-of-type(2) {
+	margin-right: 10px;
+}
+
+.power-keys {
+	background-color: #3498DB;
+	display: block;
+	padding: 10px 10px 14px;
+	height: 20px;
+}
+
+.power-keys-item {
+	background-color: #2e89c5;
+	border-radius: 3px;
+	width: auto;
+	padding: 5px 7px;
+	color: #fcfcfc;
+	font-weight: 400;
+	font-size: 12px;
+	text-align: center;
+	list-style: none;
+	float: left;
 	margin-right: 10px;
 }
