--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -1,3 +1,15 @@
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.5);
+	height: 100%;
+	width: 100%;
+	z-index: 1040;
+}
+
 .modal {
 	opacity: 0;
 	-webkit-animation:fadeIn ease-in 1;
@@ -82,18 +94,21 @@
 .month {
 	font-size: 30px;
 	line-height: 35px;
+	font-weight: 300;
 }
 
 .day {
 	font-size: 56px;
 	line-height: 60px;
 	padding-bottom: 10px;
+	font-weight: 300;
 }
 
 .year {
 	font-size: 26px;
 	line-height: 35px;
 	opacity: 0.7;
+	font-weight: 300;
 }
 
 .arrow-left {
@@ -150,6 +165,7 @@
 	vertical-align: top;
 	color: #ddd;
 	width: auto;
+	font-size: 15px;
 }
 
 .table tr > td a {
@@ -171,9 +187,14 @@
 	color: #fcfcfc;
 }
 
+.table tr > td a.today {
+	background-color: rgba(52,152,219,0.2);
+}
+
 .table tr > td a:hover {
 	background-color: #2e89c5;
 	color: #fcfcfc;
+	text-decoration: none;
 }
 
 .footer {
