--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -47,6 +47,10 @@
 	width: 100%;
 }
 
+.hidden-input {
+	display: none;
+}
+
 @-webkit-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 @-moz-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
