--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -212,7 +212,7 @@
 }
 
 .btn {
-	margin-right: 30px;
+	margin-left: 30px;
 	background-color: transparent;
 	border: 0;
 	font-family: 'Roboto';
@@ -279,7 +279,7 @@
 	border: 1px solid #ddd;
 	min-width: 200px;
 	line-height: 48px;
-	height: auto;
+	height: 50px;
 	padding-left: 15px;
 }
 
