--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -267,6 +267,31 @@
 	float: left;
 	margin-right: 15px;
 	margin-bottom: 5px;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.date-range-list-item-btn {
+	padding: 12px;
+	border: 1px solid #ddd;
+	cursor: pointer;
+}
+
+.date-range-list-item-btn i {
+	color: rgba(0,0,0,0.56);
+}
+
+.date-range-list-item-btn:hover {
+	background-color: #fff;
+	border-color: #ccc;
+}
+
+.date-range-list-item-btn:hover i {
+	color: rgba(0,0,0,0.87);
 }
 
 .date-range-layout-vertical {
