--- a/src/Clock.css
+++ b/src/Clock.css
@@ -98,7 +98,7 @@
 
 .h1,
 .m05 {
-    left: 65%;
+    left: 64%;
     margin-top: 10%;
 }
 
@@ -138,7 +138,7 @@
 
 .h7,
 .m35 {
-    right: 65%;
+    right: 63%;
     bottom: 0;
     margin-bottom: 10%;
 }
@@ -173,26 +173,29 @@
     height: 9px;
     width: 9px;
     border-radius: 50%;
-    background-color: #3498DB;
+    background-color: rgba(0,0,0,0.56);
     position: absolute;
     left: 50%;
     top: 50%;
     margin-left: -4px;
     margin-top: -4px;
+    /*display: none;*/
 }
 
 .tick {
-    height: 106px;
+    height: 50px;
     width: 1px;
     position: absolute;
     left: 50%;
+    top: 50%;
     /*margin-left: -2px;*/
     /*margin-top: 2px;*/
-    top: 41px;
+    /*top: 6px;*/
     background-color: #3498DB;
     transform-origin: 1px 100%;
     -webkit-transform-origin: 1px 100%;
     z-index: 0;
+    display: none;
     /*transform: rotate(attr(data-degree)deg);*/
 }
 
@@ -209,5 +212,5 @@
     left: 50%;
     height: 50%;
     width: 1px;
-    background: rgba(0,0,0,0.10);
+    background: rgba(0,0,0,0.0);
 }
