--- a/src/Clock.css
+++ b/src/Clock.css
@@ -2,7 +2,7 @@
     background-color: #3498DB;
     height: 80px;
     padding-right: 20px;
-    padding-bottom: 10px;
+    padding-top: 20px;
 }
 
 .time {
@@ -179,38 +179,4 @@
     top: 50%;
     margin-left: -4px;
     margin-top: -4px;
-    /*display: none;*/
-}
-
-.tick {
-    height: 50px;
-    width: 1px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    /*margin-left: -2px;*/
-    /*margin-top: 2px;*/
-    /*top: 6px;*/
-    background-color: #3498DB;
-    transform-origin: 1px 100%;
-    -webkit-transform-origin: 1px 100%;
-    z-index: 0;
-    display: none;
-    /*transform: rotate(attr(data-degree)deg);*/
-}
-
-.hori {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 1px;
-    background: rgba(0,0,0,0.03);
-}
-
-.vert {
-    position: absolute;
-    left: 50%;
-    height: 50%;
-    width: 1px;
-    background: rgba(0,0,0,0.0);
 }
