--- a/src/DatePickerStyle.css
+++ b/src/DatePickerStyle.css
@@ -64,6 +64,7 @@
 	font-weight: 300;
 	border-radius: 2px 2px 0 0;
 	font-family: 'Roboto', sans-serif;
+	user-select: none;
 }
 
 .date {
@@ -72,6 +73,7 @@
 	padding: 10px;
 	font-weight: 300;
 	font-family: 'Roboto', sans-serif;
+	user-select: none;
 }
 
 .left {
@@ -103,6 +105,7 @@
 	line-height: 35px;
 	font-weight: 300;
 	font-family: 'Roboto', sans-serif;
+	user-select: none;
 }
 
 .day {
@@ -111,6 +114,7 @@
 	padding-bottom: 10px;
 	font-weight: 300;
 	font-family: 'Roboto', sans-serif;
+	user-select: none;
 }
 
 .year {
@@ -119,6 +123,7 @@
 	opacity: 0.7;
 	font-weight: 300;
 	font-family: 'Roboto', sans-serif;
+	user-select: none;
 }
 
 .arrow-left {
@@ -167,6 +172,7 @@
 	border-bottom: 1px solid #e5e5e5;
 	padding: 20px 0 10px 0;
 	color: #999;
+	user-select: none;
 }
 
 .table tr > td {
@@ -177,6 +183,7 @@
 	color: #ddd;
 	width: auto;
 	font-size: 14px;
+	user-select: none;
 }
 
 .table tr > td a {
